--- a/12-Major_biological_themes.Rmd
+++ b/12-Major_biological_themes.Rmd
@@ -1,4 +1,4 @@
-# (13C) Defining major biological themes
+# (13C) Defining major biological themes {#annotate}
 
 Enrichment maps typically include clusters of similar pathways representing major biological themes. Clusters can be automatically defined and summarized using the AutoAnnotate Cytoscape application. [AutoAnnotate](http://apps.cytoscape.org/apps/autoannotate) [@autoannotate] first clusters the network using the [clusterMaker2](http://apps.cytoscape.org/apps/clustermaker2) [@clustermaker] application and then summarizes each cluster on the basis of word frequency within the pathway names via the [WordCloud](http://apps.cytoscape.org/apps/wordcloud) [@wordcloud] app.
 
